# Reg-GAN

./: pyproject.toml  train.py
Yaml/: CycleGan.yaml  CycleGan_local.yaml
scripts/: split_train_val.py
test-data/A/: 0_other.tiff
test-data/B/: 0_light_sheet_template.tiff
trainer/: CycTrainer.py  datasets.py  reg.py  transformer.py  utils.py
